# json-view

./: .gitignore  CMakeLists.txt  Makefile  README.md  TODO.md
.github/workflows/: release.yml
cmake/: try_apply_patch.cmake
doc/: json-view.1  json-view.1.in  json-view.texi  json-view.texi.in
examples/: invalid.json  test.json
include/: json_view_core.hpp
patches/: tvision-ncurses.patch
scripts/: build-al2023-rpm.sh  build-static-rpm.sh  install.sh
src/: json-view-app.cpp  json-view.cpp  json_view_core.cpp
